# watchd

server/: Cargo.toml  Makefile
server/migrations/: 20230730052811_create_users_table.sql
server/src/: main.rs
