[package]
name = "watchd-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "sqlite", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.104"

